# wavedrompy2

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/wavedrom2/: __init__.py  assign.py  attrdict.py  bitfield.py  svg.py  tspan.py  waveform.py
src/wavedrom2/utils/: __init__.py  render.py
src/wavedrom2/waveskin/: __init__.py  dark.py  default.py  lowkey.py  narrow.py  narrower.py  narrowerer.py  typing.py
src/wavedrom2/waveskin/_js_src/: create_waveskin.py  dark.js  default.js  lowkey.js  narrow.js  narrower.js  narrowerer.js
test/: conftest.py  diff.py  single_test.py  test_brick_regression.py  test_render.py
tests/: brick_regressions.py  conftest.py  diff.py  test_brick_regression.py  test_render.py
tests/files/: tutorial_12.json
