[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[project]
name = "wavedrom2"
version = "1.0.0a0"
description = "WaveDrom compatible python command line."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Aliaksei Chapyzhenka"},
    {name = "BreizhGeek"},
    {name = "Kazuki Yamamoto", email = "k4zuki@github.com"},
    {name = "Stefan Wallentowitz", email = "stefan@wallentowitz.de"},
    {name = "allRisc", email = "allrisc.dev@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
requires-python = ">=3.7"

dependencies = [
    "pyyaml>=6.0.1",
    "svgwrite>=1.4.3",
]

[project.urls]
    Homepage = "https://github.com/allrisc/wavedrompy2"
    Download = "https://pypi.org/project/wavedrom2/"

[project.optional-dependencies]
CairoSVG = [
    "cairosvg>=1.0",
]

[dependency-groups]
dev = [
    "demjson3>=3.0.6",
    "flake8>=3.9.2",
    "lxml-stubs>=0.5.1",
    "mypy>=1.4.1",
    "pillow>=9.5.0",
    "pytest>=7.4.4",
    "ruff>=0.12.8",
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=2.0.0",
    "types-pyyaml>=6.0.12.12",
    "xmldiff>=2.6.3",
]

[project.scripts]
wavedrompy="wavedrom2:main"
wavedrompy2="wavedrom2:main"

####################################################################################################
# Tooling
####################################################################################################

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["svgwrite.*", "demjson3.*"]
follow_untyped_imports = true


[tool.ruff]
line-length = 100
indent-width = 4

target-version = "py38"

preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B", "W"]